# PIC18F4550Ctemplate

./: .gitignore  README.md  main.c
include/UART/: UART.h  UART_cfg.h  UART_include.h  UART_internal.h  UART_types.h
include/bldrCtl/: bldrCtl.h  bldrCtl_cfg.h  bldrCtl_flashWrapper.h  bldrCtl_types.h
include/config/: board_config.h  project_config.h  project_macros.h
include/flashCtl/: flash.h  flash_cfg.h  flash_types.h
nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
nbproject/private/: SuppressibleMessageMemo.properties  configurations.xml  private.xml
project/: CMakeLists.txt  main.c
project/BoardConfig/: CMakeLists.txt
project/BoardConfig/Board/: CMakeLists.txt
project/BoardConfig/USB/: CMakeLists.txt
project/BoardConfig/USB/cfg/: fixed_address_memory.h  system.c  system.h  usb_descriptors.c
project/BoardConfig/include/: board_config.h
project/BoardConfig/src/: board_config.c
project/Libs/: CMakeLists.txt
project/Libs/BSP/: CMakeLists.txt
project/Libs/BSP/Adc/: CMakeLists.txt
project/Libs/BSP/Adc/include/: Adc_cfg.h  Adc_include.h  Adc_types.h
project/Libs/BSP/Adc/src/: Adc.c
project/Libs/BSP/Dio/: CMakeLists.txt
project/Libs/BSP/Dio/include/: Dio.h  Dio_cfg.h  Dio_include.h  Dio_types.h
project/Libs/BSP/Dio/src/: Dio.c
project/Libs/BSP/Flash/: CMakeLists.txt
project/Libs/BSP/Flash/include/: Flash.h  flash_cfg.h
project/Libs/BSP/Flash/src/: Flash.c  flash.c
project/Libs/BSP/IIC/: CMakeLists.txt
project/Libs/BSP/IIC/include/: IIC.h  IIC_cfg.h  IIC_include.h  IIC_internal.h  IIC_types.h
project/Libs/BSP/IIC/src/: IIC.c  IIC_internal.c
project/Libs/BSP/Mcu/: CMakeLists.txt
project/Libs/BSP/Mcu/include/: Mcu_cfg.h  Mcu_include.h
project/Libs/BSP/Mcu/src/: Mcu.c
project/Libs/BSP/MicrochipUSBStack/: CMakeLists.txt
project/Libs/BSP/MicrochipUSBStack/cfg/: fixed_address_memory.h  usb_config.h  usb_descriptors.c  usb_events.c
project/Libs/BSP/MicrochipUSBStack/src/: usb_device_cdc.c
project/Libs/BSP/MicrochipUSBStack/v2018_11_26/cfg/: system.h  usb_config.h  usb_descriptors.c  usb_events.c
project/Libs/BSP/Pwm/: CMakeLists.txt
project/Libs/BSP/Pwm/include/: Pwm_include.h  Pwm_types.h
project/Libs/BSP/Pwm/src/: Pwm.c
project/Libs/BSP/SPI/: CMakeLists.txt
project/Libs/BSP/SPI/include/: SPI.h  SPI_include.h  SPI_types.h
project/Libs/BSP/SPI/src/: SPI.c
project/Libs/BSP/Timer1/: CMakeLists.txt
project/Libs/BSP/Timer1/include/: Timer1.h  Timer1_include.h  Timer1_internal.h  Timer1_types.h
project/Libs/BSP/Timer1/src/: Timer1.c
project/Libs/BSP/UART/: CMakeLists.txt
project/Libs/BSP/UART/include/: UART_cfg.h  UART_include.h  UART_types.h
project/Libs/BSP/UART/src/: UART.c
project/Libs/BSP/USB/: CMakeLists.txt
project/Libs/BSP/USB/include/: USB_cfg.h  USB_internal.h  USB_types.h
project/Libs/BSP/USB/src/: USB.c
project/Libs/BldrCtl/: CMakeLists.txt
project/Libs/BldrCtl/include/: BldrCtl.h  BldrCtl_cfg.h
project/Libs/BldrCtl/src/: BldrCtl.c
project/Libs/Keypad/: CMakeLists.txt
project/Libs/Keypad/include/: Keypad_include.h  Keypad_types.h
project/Libs/Keypad/src/: Keypad.c
project/Libs/Utils/: CMakeLists.txt
project/Libs/Utils/include/: utils.h  utils_include.h
project/Libs/Utils/src/: project_macros.c  utils.c
project/Libs/bldrCtl/: CMakeLists.txt
project/Libs/bldrCtl/include/: bldrCtl_cfg.h  bldrCtl_types.h
project/Libs/bldrCtl/src/: bldrCtl.c
project/cmake/: compiler.cmake  compiler.opt  linker.opt  project.cmake  toolchain.cmake
project/inc/: project_macros.h
project/inc/Board/: board_config.h
project/inc/Board/Adc/: Adc.h  Adc_cfg.h  Adc_include.h  Adc_internal.h  Adc_types.h
project/inc/Board/Dio/: Dio.h  Dio_cfg.h  Dio_include.h
project/inc/Board/IIC/: IIC.h  IIC_include.h  IIC_internal.h  IIC_types.h
project/inc/Board/Mcu/: Mcu.h  Mcu_include.h
project/inc/Board/Pwm/: Pwm.h  Pwm_cfg.h  Pwm_include.h  Pwm_types.h
project/inc/Board/SPI/: SPI.h  SPI_cfg.h  SPI_include.h  SPI_internal.h
project/inc/Board/Timer1/: Timer1.h  Timer1_cfg.h  Timer1_include.h
project/inc/Board/UART/: UART.h  UART_include.h  UART_internal.h  UART_types.h
project/inc/Board/USB/: USB.h  USB_include.h
project/inc/Board/flashCtl/: flash.h  flash_types.h
project/inc/Keypad/: Keypad.h  Keypad_cfg.h  Keypad_include.h  Keypad_types.h
project/inc/bldrCtl/: bldrCtl.h  bldrCtl_cfg.h  bldrCtl_types.h
project/inc/utils/: utils_include.h  utils_types.h
project/source/: board_config.c  project_macros.c
project/source/Board/: board_config.c
project/source/Board/Adc/: Adc.c
project/source/Board/Dio/: Dio.c
project/source/Board/IIC/: IIC.c  IIC_internal.c
project/source/Board/Mcu/: Mcu.c
project/source/Board/Pwm/: Pwm.c
project/source/Board/SPI/: SPI.c
project/source/Board/Timer1/: Timer1.c
project/source/Board/UART/: UART.c
project/source/Board/USB/: USB.c
project/source/Board/flashCtl/: flash.c
project/source/Keypad/: Keypad.c
project/source/UART/: UART.c
project/source/bldrCtl/: bldrCtl.c  bldrCtl_flashWrapper.c
project/source/flashCtl/: flash.c
project/source/utils/: utils.c
