################################################################################
# @file CMakeLists.txt
# @author Josepablo C (josepablo134@gmail.com)
################################################################################

add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Board )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/USB )
