################################################################################
# @file CMakeLists.txt
# @author Josepablo C (josepablo134@gmail.com)
################################################################################

add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/bldrCtl )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/BSP )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Keypad )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Utils )
