################################################################################
# @file CMakeLists.txt
# @author Josepablo C (josepablo134@gmail.com)
################################################################################

add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Adc )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Dio )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Flash )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/IIC )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Mcu )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Pwm )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/SPI )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/Timer1 )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/UART )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/USB )
